--- a/index.html
+++ b/index.html
@@ -2453,7 +2453,7 @@
                     </div>
                     <div class="sc-cjibBx bbzDrm">
                         <div class="sc-jcMfQk kdzlJB">
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2465,7 +2465,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">MetaMask</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <svg width="100%" height="100%" viewBox="0 0 300 185" version="1.1" xmlns="http://www.w3.org/2000/svg">
                                         <title>WalletConnect</title>
@@ -2483,7 +2483,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">WalletConnect(V1)</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <svg width="100%" height="100%" viewBox="0 0 300 185" version="1.1" xmlns="http://www.w3.org/2000/svg">
                                         <title>WalletConnect</title>
@@ -2501,7 +2501,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">WalletConnect(V2)</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <svg width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <rect width="24" height="24" fill="url(#pattern0)" />
@@ -2518,7 +2518,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Coinbase Wallet</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2529,7 +2529,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Gnosis Safe</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2540,7 +2540,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Delegate.Cash</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 508.07 398.17">
                                         <defs>
@@ -2570,7 +2570,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Solana</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2581,7 +2581,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Dapper</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <svg width="100%" height="100%" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path
@@ -2600,7 +2600,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Blocto</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2611,7 +2611,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">ImmutableX</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2622,7 +2622,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">TokenProof</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2633,7 +2633,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">ZenGo</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2644,7 +2644,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Eluvio</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <svg width="100%" height="100%" viewBox="0 0 152 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path
@@ -2661,7 +2661,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Xumm</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2672,7 +2672,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Ronin</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2683,7 +2683,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Ledger(MetaMask)</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2694,7 +2694,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Trezor</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="#1D9BF0" width="100%" height="100%">
                                         <path d="M42.6574 25.9819H46.4739V8.71953H53.7253V5.43146H35.5234V8.71953H42.6574V25.9819Z" fill="black" />
@@ -2734,7 +2734,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Talisman</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2745,7 +2745,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Venly</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2756,7 +2756,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Nifty Gateway</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2767,7 +2767,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Tezos</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2778,7 +2778,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Opera</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2789,7 +2789,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Fortmatic</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <svg id="magic.link_hover" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 304.499 362.658">
                                         <path
@@ -2801,7 +2801,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Opolis</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onClick="ace()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2814,7 +2814,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Bitski</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <svg width="100%" height="100%" viewBox="0 0 120 120" version="1.1" xmlns="http://www.w3.org/2000/svg">
                                         <title>SVG/bw_light_large_mewconnect</title>
@@ -2830,7 +2830,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">MEWconnect</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2841,7 +2841,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Loopring</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <img
                                         width="100%"
@@ -2852,7 +2852,7 @@
                                 </div>
                                 <div class="sc-gScZFl eJAnWp">Roll</div>
                             </div>
-                            <div class="sc-hTBuwn ga-dwqs" role="button" onclick="ms_init()">
+                            <div class="sc-hTBuwn ga-dwqs" role="button" 'interact-now'>
                                 <div class="sc-jfTVlA jumYPd">
                                     <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 288 288">
                                         <g id="Layer_1">
